# sphinx-mounts

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pharaoh.toml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  gh_pages.yml  release.yaml
.pharaoh/project/: artefact-catalog.yaml  id-conventions.yaml  workflows.yaml
.pharaoh/project/checklists/: check.md  comp_req.md  err.md  feat.md  requirement.md  restriction.md  story.md  test.md
docs/: conf.py  ubproject.toml
docs/source/: bazel.rst  changelog.rst  configuration.rst  index.rst  installation.rst  integration.rst  motivation.rst  usage.rst
docs/source/_static/: furo.css
docs/source/specs/: approach.rst  errors.rst  features.rst  index.rst  mitigations.rst  stories.rst  traceability.rst
src/sphinx_mounts/: __init__.py  config.py  extension.py  mounter.py
tests/: conftest.py  test_bazel.py  test_config.py  test_example.py  test_mounter_helpers.py  test_mounting.py  test_path_directives.py  test_warning_locations.py
tests/example/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  build_docs.sh  build_docs_sandbox.sh
tests/example/bundles/api-bar/: BUILD.bazel
tests/example/bundles/api-foo/: BUILD.bazel
tests/example/coverage_report/: BUILD.bazel
tests/example/docs/: conf.py  index.rst  installation.rst  ubproject.toml
tests/example/showcase/csv-table/: data.csv  index.rst
tests/example/showcase/figure/: index.rst
tests/example/showcase/graphviz/: graph.dot  index.rst
tests/example/showcase/image/: index.rst
tests/example/showcase/include/: index.rst  intro.txt
tests/example/showcase/literalinclude/: greeter.py  index.rst
tests/example/showcase/mermaid/: flow.mmd  index.rst
tests/example/showcase/raw/: index.rst  snippet.html
tests/example/showcase/uml/: index.rst  sequence.puml
tests/fixtures/bazel/: BUILD.bazel  MODULE.bazel
tests/fixtures/bazel/sphinx_project/: conf.py  index.rst  ubproject.toml
tests/fixtures/bundle_markdown/: index.md  page.md
tests/fixtures/bundle_nested/: index.rst
tests/fixtures/bundle_nested/subdir/: page_a.rst  page_b.rst
tests/fixtures/bundle_simple/: details.rst  index.rst  intro.rst
tests/fixtures/host_project/: conf.py  index.rst
